--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </header>
     <main>
         <section class="section-order">
-            <div class="container">
                 <div class="div-main-general-section-order">
                     <div class="div-main-general-section-order__container">
                         <div class="div-main-general-section-order__div-text">
@@ -42,7 +41,6 @@
                     </div>
                     <img class="part2-section-order" src="./img/img-goup.png" alt="">
                 </div>
-            </div>
         </section>
         <section class="section-description">
             <div class="div-main-general-section-description">
@@ -246,10 +244,10 @@
                                 few moments and relax. </p>
                         </div>
                         <div class="swiper-button-section-video">
-                            <div class="swiper-button-next posishion1"><p class="div-main-general-section10__div-content-text-link">1-</p></div>
-                            <div class="swiper-button-next posishion2"><p class="div-main-general-section10__div-content-text-link">2-</p></div>
-                            <div class="swiper-button-next posishion3"><p class="div-main-general-section10__div-content-text-link">3-</p></div>
-                            <div class="swiper-button-next posishion4"><p class="div-main-general-section10__div-content-text-link">4</p></div>
+                            <div class="swiper-button-next posishion1"><p class="div-main-general-section-video__div-content-text-link">1-</p></div>
+                            <div class="swiper-button-next posishion2"><p class="div-main-general-section-video__div-content-text-link">2-</p></div>
+                            <div class="swiper-button-next posishion3"><p class="div-main-general-section-video__div-content-text-link">3-</p></div>
+                            <div class="swiper-button-next posishion4"><p class="div-main-general-section-video__div-content-text-link">4</p></div>
                         </div>
                     </div>
                 </div>
@@ -258,27 +256,29 @@
         <section class="section-question">
             <div class="container section-question-center">
                 <div class="div-main-general-section-question">
-                    <h2 class="div-main-general-section-question__title">FAQ</h2>
-                    <div class="div-main-general-section-question__osnova-content">
-                        <div class="div-main-general-section-question__div-text">
-                            <h4>01
-                                How to pair with a mobile device?</h4>
-                            <button class="div-main-general-section-question__button">?</button>
-                        </div>
-                        <div class="div-main-general-section-question__div-text">
-                            <h4>02
-                                What is the wireless range of the Bose NC 700?</h4>
-                            <button class="div-main-general-section-question__button">?</button>
-                        </div>
-                        <div class="div-main-general-section-question__div-text">
-                            <h4>03
-                                How do I fold the Bose NC 700 headphones for storage?</h4>
-                            <button class="div-main-general-section-question__button">?</button>
-                        </div>
-                        <div class="div-main-general-section-question__div-text">
-                            <h4>04
-                                Does the guarantee work internationally?</h4>
-                            <button class="div-main-general-section-question__button">?</button>
+                    <div>
+                        <h2 class="div-main-general-section-question__title">FAQ</h2>
+                        <div class="div-main-general-section-question__osnova-content">
+                            <div class="div-main-general-section-question__div-text">
+                                <h4>01
+                                    How to pair with a mobile device?</h4>
+                                <button class="div-main-general-section-question__button">?</button>
+                            </div>
+                            <div class="div-main-general-section-question__div-text">
+                                <h4>02
+                                    What is the wireless range of the Bose NC 700?</h4>
+                                <button class="div-main-general-section-question__button">?</button>
+                            </div>
+                            <div class="div-main-general-section-question__div-text">
+                                <h4>03
+                                    How do I fold the Bose NC 700 headphones for storage?</h4>
+                                <button class="div-main-general-section-question__button">?</button>
+                            </div>
+                            <div class="div-main-general-section-question__div-text">
+                                <h4>04
+                                    Does the guarantee work internationally?</h4>
+                                <button class="div-main-general-section-question__button">?</button>
+                            </div>
                         </div>
                     </div>
                 </div>
