--- a/index.html
+++ b/index.html
@@ -26,21 +26,22 @@
     </header>
     <main>
         <section class="section-order">
-                <div class="div-main-general-section-order">
-                    <div class="div-main-general-section-order__container">
-                        <div class="div-main-general-section-order__div-text">
-                            <p class="div-main-general-section-order__div-text-text-start">Noise cancellation headphones that are
-                                capable for a lot of things</p>
-                            <p class="div-main-general-section-order__div-text-text-end">Up to 20 hours of playback</p>
-                        </div>
-                        <div class="div-main-general-section-order__div-text-and-button">
-                            <h1>Headphones Bose NC 700</h1>
-                            <span><button
-                                    class="div-main-general-section-order__div-text-and-button-button">order</button></span>
-                        </div>
+            <div class="div-main-general-section-order">
+                <div class="div-main-general-section-order__container">
+                    <div class="div-main-general-section-order__div-text">
+                        <p class="div-main-general-section-order__div-text-text-start">Noise cancellation headphones
+                            that are
+                            capable for a lot of things</p>
+                        <p class="div-main-general-section-order__div-text-text-end">Up to 20 hours of playback</p>
                     </div>
-                    <img class="part2-section-order" src="./img/img-goup.png" alt="">
+                    <div class="div-main-general-section-order__div-text-and-button">
+                        <h1>Headphones Bose NC 700</h1>
+                        <span><button
+                                class="div-main-general-section-order__div-text-and-button-button">order</button></span>
+                    </div>
                 </div>
+                <img class="part2-section-order" src="./img/img-goup.png" alt="">
+            </div>
         </section>
         <section class="section-description">
             <div class="div-main-general-section-description">
@@ -118,7 +119,8 @@
                 <div class="div-main-general-section-text">
                     <div class="div-main-general-section-text__div-text">
                         <h4 class="div-main-general-section-text__div-text">Maximum enjoyment</h4>
-                        <p class="div-main-general-section-text__div-text-text">In order to create a comfortable atmosphere
+                        <p class="div-main-general-section-text__div-text-text">In order to create a comfortable
+                            atmosphere
                             - raise
                             the level by level from the "transparent" mode to the maximum blocking of sounds. The
                             conversation mode can be activated in one click using a special button.</p>
@@ -138,8 +140,10 @@
                     <div class="div-main-general-section-information-platform__content">
                         <h2 class="div-main-general-section-information-platform__title">Bose AR</h2>
                         <div class="div-main-general-section-information-platform__osnova-content">
-                            <h4 class="div-main-general-section-information-platform__osnova-content-title">Brand name technology</h4>
-                            <p class="div-main-general-section-information-platform__osnova-content-text">Bose AR is a unique audio platform
+                            <h4 class="div-main-general-section-information-platform__osnova-content-title">Brand name
+                                technology</h4>
+                            <p class="div-main-general-section-information-platform__osnova-content-text">Bose AR is a
+                                unique audio platform
                                 augmented reality, that opens before you new facets of sound. It allows you
                                 to stay connected to the real world and immerse yourself in the virtual universe
                                 at the same time.</p>
@@ -177,12 +181,14 @@
                     <div class="div-main-general-section-history__div-part1">
                         <h2 class="div-main-general-section-history__div-part1-title">brand creation history</h2>
                         <div class="div-main-general-section-history__div-part1-text">
-                            <p class="div-main-general-section-history__div-part1-text2">The history of Bose Corporation began
+                            <p class="div-main-general-section-history__div-part1-text2">The history of Bose Corporation
+                                began
                                 with disappointment. In 1956, MIT graduate student
                                 Amar Bose bought one of the best stereo systems at the time for his home. After a few
                                 minutes of listening to the audio recording, his bewilderment turned to disappointment.
                             </p>
-                            <p class="div-main-general-section-history__div-part1-text2">From Amar's point of view, the sound
+                            <p class="div-main-general-section-history__div-part1-text2">From Amar's point of view, the
+                                sound
                                 was so flat and unnatural that it was better not to
                                 listen to the music at all than to listen to it in such a distorted form.</p>
                         </div>
@@ -203,9 +209,11 @@
                     <img src="./img/img12-11T215132.599.png" alt="">
                     <div class="div-main-general-section-developer__osnava-content">
                         <img class="div-main-general-section-developer__osnava-content-img" src="./img/img1.png" alt="">
-                        <h4 class="div-main-general-section-developer__osnava-content-titel">Never stop dreaming. Always dream of
+                        <h4 class="div-main-general-section-developer__osnava-content-titel">Never stop dreaming. Always
+                            dream of
                             the best, and think about how to achieve it.</h4>
-                        <p class="div-main-general-section-developer__osnava-content-text">Amar Bose is a company founder</p>
+                        <p class="div-main-general-section-developer__osnava-content-text">Amar Bose is a company
+                            founder</p>
                     </div>
                 </div>
             </div>
@@ -237,17 +245,26 @@
                         <div class="div-main-general-section-video__div-content-text">
                             <a class="div-main-general-section-video__div-content-text-link"
                                 href="https://www.youtube.com/watch?v=VqP11Ma_2Fk&ab_channel=Bose">Bose Сorporation</a>
-                            <p class="div-main-general-section-video__div-content-text-text">Critically acclaimed for their
+                            <p class="div-main-general-section-video__div-content-text-text">Critically acclaimed for
+                                their
                                 powerful noise cancelling, astonishing sound, and
                                 unrivaled voice pickup, Bose Noise Cancelling Headphones 700 help turn any space into
                                 the perfect place to listen to music, get work done, or just shut out the world for a
                                 few moments and relax. </p>
                         </div>
                         <div class="swiper-button-section-video">
-                            <div class="swiper-button-next posishion1"><p class="div-main-general-section-video__div-content-text-link">1-</p></div>
-                            <div class="swiper-button-next posishion2"><p class="div-main-general-section-video__div-content-text-link">2-</p></div>
-                            <div class="swiper-button-next posishion3"><p class="div-main-general-section-video__div-content-text-link">3-</p></div>
-                            <div class="swiper-button-next posishion4"><p class="div-main-general-section-video__div-content-text-link">4</p></div>
+                            <div class="swiper-button-next posishion1">
+                                <p class="div-main-general-section-video__div-content-text-link">1-</p>
+                            </div>
+                            <div class="swiper-button-next posishion2">
+                                <p class="div-main-general-section-video__div-content-text-link">2-</p>
+                            </div>
+                            <div class="swiper-button-next posishion3">
+                                <p class="div-main-general-section-video__div-content-text-link">3-</p>
+                            </div>
+                            <div class="swiper-button-next posishion4">
+                                <p class="div-main-general-section-video__div-content-text-link">4</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -291,8 +308,8 @@
                         <div class="div-main-general-section-prise__div-part1">
                             <h2 class="div-main-general-section-prise__title">bose nc 700</h2>
                             <div class="div-main-general-section-prise__div-part1-img">
-                                <img src="./img/Group421.png" alt="">
-                                <img src="./img/Group422.png" alt="">
+                                <div class="swiper-button-prev posishion-ultra"><img src="./img/Group421.png" alt=""></div>
+                                <div class="swiper-button-next posishion-ultra"> <img src="./img/Group422.png" alt=""></div>
                             </div>
                         </div>
                         <div class="div-main-general-section-prise__div-part2">
@@ -320,8 +337,6 @@
                             <div class="swiper-slide"><img src=".//img/img-2grey.png" alt=""></div>
                         </div>
                     </div>
-                    <div class="swiper-button-prev"><img src="./img/Group421.png" alt=""></div>
-                    <div class="swiper-button-next"> <img src="./img/Group422.png" alt=""></div>
                 </div>
 
                 <img class="big-img" src="./img/img-group.png" alt="">
@@ -332,7 +347,8 @@
                 <div class="div-main-general-section-end">
                     <div class="div-main-general-section-end__div-text">
                         <h2>Feedback</h2>
-                        <h4 class="div-main-general-section-end__div-text-h4">We'll help you find the right headphones for
+                        <h4 class="div-main-general-section-end__div-text-h4">We'll help you find the right headphones
+                            for
                             you.</h4>
                     </div>
                     <div class="div-main-general-section-end__osnova-content">
@@ -361,7 +377,8 @@
                                 </span>
                                 <div class="div-main-general-section-end__div-galochka-flex-link">
                                     <p>I agree to the</p>
-                                    <a class="div-main-general-section-end__div-galochka-link" href="">privacy policy</a>
+                                    <a class="div-main-general-section-end__div-galochka-link" href="">privacy
+                                        policy</a>
                                 </div>
                             </label>
                         </div>
